--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "up": "drizzle-kit up:pg"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^2.0.3",
     "class-variance-authority": "^0.7.0",
