--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^2.0.3",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
@@ -27,6 +28,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.4.4",
     "drizzle-orm": "^0.29.3",
+    "emoji-picker-react": "^4.7.17",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
