--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
