--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^2.0.3",
+    "@stripe/stripe-js": "^3.2.0",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.39.6",
     "class-variance-authority": "^0.7.0",
@@ -50,6 +51,7 @@
     "react-hook-form": "^7.50.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "stripe": "^14.24.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
